@@ -366,3 +366,14 @@ will be shown preceding the progress bar::
                            length=number_of_users) as bar:
         for user in bar:
             modify_the_user(user)
+
+Sometimes, one may need to iterate over an external iterator, and advance the
+progress bar iregularly. To do so, you need to speficy the length (and no
+iterable), and use the update method on the context return value instead of
+iterating directly over it::
+
+    with click.progressbar(length=total_size,
+                           label='Unzipping archive') as bar:
+        for archive in zip_file:
+            archive.extract()
+            bar.update(archive.size)
